compilateurDeca/src/test/deca/context/invalid/sans_objet/comparaison/null_cmp_null.deca
// Description:
//    Test de contexte : comparaison type incompatible.
//
// Resultats:
//    Erreur contextuelle : Comparaison invalide entre float et bool.
//
// Historique:
//    cree le 13/01/2026

{
    if (null > null) {}
}